Added new Torch Dataset wrapper to emotion/dataset.py that loads from the H5 archives - note that logic to chunk the file reads so that the file is not constantly being opened / closed / etc. is NOT YET THERE. Added new DownstreamExpert that utilizes this last_layer data from the new Dataset, and make it the default. Saved the original runner.py (with wandb logging also) into runner_orig_with_wandb.py. Small updates to script that saves folds to H5 for completeness. Updated runner.py's TRAIN and EVAL loop logic such that it directly loads last_layer data in each batch and simply applies the downstream model, rather than loading wavs and running them through upstream & featurizer

--- a/s3prl/downstream/emotion/config.yaml
+++ b/s3prl/downstream/emotion/config.yaml
@@ -1,8 +1,12 @@
 runner:
+  # total_steps: 600
   total_steps: 60000
   gradient_clipping: 1
   gradient_accumulate_steps: 1
 
+  # log_step: 60
+  # eval_step: 60
+  # save_step: 60
   log_step: 700
   eval_step: 700
   save_step: 700
