--- a/s3prl/downstream/emotion/config.yaml
+++ b/s3prl/downstream/emotion/config.yaml
@@ -24,20 +24,23 @@ scheduler:
 
 downstream_expert:
   datarc:
-    root: /home/xadxad/work/audioproj/datasets/IEMOCAP/IEMOCAP_full_release
+    root: /home/desmondcaulley/Documents/Research/Corpora/IEMOCAP
     test_fold: fold1
     pre_load: True
-    train_batch_size: 10
-    eval_batch_size: 10
+    train_batch_size: 20
+    eval_batch_size: 20
     num_workers: 0
     valid_ratio: 0.2
 
   modelrc:
     projector_dim: 256
-    select: DeepModel
+    select: MarbleNet
 
     UtteranceLevel:
       pooling: MeanPooling
+
+    MarbleNet:
+      pooling: 2
 
     DeepModel:
       model_type: CNNSelfAttention
